test/zinc_source/compile_errors/functions/03_duplicate_named_arg.zn
// expected-error: multiple values for argument 'x'
fn add(x, y) {
    return x + y
}

fn main() {
    add(1, x=2)
}
